examples/errors/parsing/spec_take.cn
fun incrementP : Int -> Pred Int [spec] = {
  n -> return (n + 1)
}

fun twice : Int -> Pred Int [spec] = {
  n ->
  take x = incrementP n;
  take y = incrementP x;
  return y
}

main : () [impure] = ()
